--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="pt">
 <head>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
+    
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
-    <!--<script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>-->
+    <!--<script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>-->
     
 
     <script>
@@ -2290,15 +2291,15 @@
                 </div>
                 <div class="col-md-4">
                     <div class="footer-col middle">
-                        <h4>como funciona?</h4>
+                        <h4>como funciona? robôs!</h4>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Um ciborgue de marte classifica as melhores empresas e startups para se trabalhar analisados dados do linkedin, glassdor e outros.</div>
+                                <div class="media-body">Eles classificam as melhores empresas e startups para se trabalhar analisados dados do linkedin, glassdor e outros.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Alguns robôs fazem todo o trabalho monitoram a internet em busca de vagas.</div>
+                                <div class="media-body">Fazem todo o trabalho varrendo diversas páginas da internet em busca de trampos (vagas).</div>
                             </li>
                         </ul>
                     </div>
